# drf-auth

./: README.md  db.sqlite3  docker-compose.yml  pyproject.toml
drf_auth_project/: asgi.py  settings.py  urls.py  wsgi.py
recipes/: models.py  serializer.py  tests.py  urls.py  views.py
recipes/migrations/: 0001_initial.py
